--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,5 +19,6 @@ jobs:
         with:
           go-version-file: './src/go.mod'
       - run: go version
+      - uses: actions/checkout@v3
       - name: Test
         run: go test -v ./...
