--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   docker-build:
-    name: DockerBuildandImageScanning
+    name: DockerBuildandTest
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -21,4 +21,4 @@ jobs:
       - run: go version
       - uses: actions/checkout@v3
       - name: Test
-        run: go test -v ./...
+        run: go test -v ./src/...
