--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,4 +21,4 @@ jobs:
       - run: go version
       - uses: actions/checkout@v3
       - name: Test
-        run: go test -v ./src/...
+        run: go test -v src/...
