--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           go-version-file: './src/go.mod'
       - run: go version
-      - run: go mod init
+      - run: go mod init ./src/go.mod
 #      - uses: actions/checkout@v3
       - name: Test with the Go CLI
         run: go test
