--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,6 +24,7 @@ jobs:
         working-directory: ./src
         run: |
              go test -v ./... -coverprofile=coverage.out 
-             go test cover -func coverage.out -o coverage.txt
+             go tool -cover -func coverage.out -o coverage.txt
+             echo coverage.txt
 
         
