--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,10 @@ jobs:
       - run: go version
 #      - uses: actions/checkout@v3
       - name: Unittest
-        working-directory: ./src
+        working-directory: src
         run: |
              go test -v ./... -coverprofile=coverage.out 
              go tool cover -func coverage.out -o coverage.txt
-             echo coverage.txt
+             cat coverage.txt
 
         
