--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,9 @@ jobs:
       - run: go version
 #      - uses: actions/checkout@v3
       - name: Unittest
-        working-directory: src
+        working-directory: ./src
         run: |
              go test -v ./...
-             go test -coverprofile coverage.out
              go tool cover -func coverage.out -o coverage.txt
              cat coverage.txt
 
